fixed graph view on mobile and added graph button on finish page

--- a/static/finish.css
+++ b/static/finish.css
@@ -48,7 +48,7 @@ body {
   }
   
   body {
-    overflow: hidden;
+    overflow: auto !important;
   }
   
   @media screen and (max-width: 500px) {
